<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <NumberPicker
                android:id="@+id/yearPicker"
                android:layout_width="55dp"
                android:layout_height="140dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/year"/>

            <NumberPicker
                android:id="@+id/monthPicker"
                android:layout_width="55dp"
                android:layout_height="140dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/month"/>

            <NumberPicker
                android:id="@+id/dayPicker"
                android:layout_width="55dp"
                android:layout_height="140dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/day"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/blank"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_time" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/hourPicker"
                android:layout_width="55dp"
                android:layout_height="140dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="140dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/hour"/>
            </RelativeLayout>

            <NumberPicker
                android:id="@+id/minutePicker"
                android:layout_width="55dp"
                android:layout_height="140dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="140dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/minute"/>
            </RelativeLayout>
            <!--<RelativeLayout-->
            <!--android:layout_width="55dp"-->
            <!--android:layout_height="140dp">-->
            <!--<TextView-->
            <!--android:textSize="15sp"-->
            <!--android:textColor="@color/white"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/zero" />-->
            <!--</RelativeLayout>-->
            <!--<NumberPicker-->
            <!--android:id="@+id/secondPicker"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="0dp"-->
            <!--android:focusable="true"-->
            <!--android:focusableInTouchMode="true" />-->
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/blank"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/ok"
            android:text="@string/ok"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/cancel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>
