<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hp.testwannianli.recorder.PlayRecordActivity">

    <ImageView
        android:id="@+id/play_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/record00" />

    <LinearLayout
        android:id="@+id/play_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_img"
        android:gravity="center">

        <TextView
            android:id="@+id/play_tip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_tip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_tip"
        android:gravity="center">

        <Button
            android:id="@+id/play_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_record_over" />

        <Button
            android:id="@+id/play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_record_again" />
    </LinearLayout>
</RelativeLayout>
