<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:background="@drawable/backpicture">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titles"
                android:text="@string/tips"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:layout_width="280dp"
                android:layout_height="49dp" />
            <TextView
                android:id="@+id/content"
                android:text="@string/hi"
                android:padding="5dp"
                android:layout_width="280dp"
                android:layout_height="125dp"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:maxLines="7" />
            <RelativeLayout
                android:layout_width="260dp"
                android:layout_height="40dp">
                <Button
                    android:id="@+id/cancel"
                    android:text="@string/exit"
                    android:background="@drawable/button_style"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
                <!--<Button
                    android:id="@+id/ok"
                    android:text="@string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/cancel" />-->
            </RelativeLayout>
        </LinearLayout>
    </AbsoluteLayout>
</RelativeLayout>
